--- a/docs.html
+++ b/docs.html
@@ -52,16 +52,51 @@
                 <section>
                     <h2>Components</h2>
                     <ol>
+                        <li>OAuth2 Authorization &amp; SSO</li>
                         <li>Workflow Configuration</li>
-                        <li>OAuth2 Authorization</li>
+                        <li>Integrations</li>
                         <li>Workflow Widget</li>
                         <li>Routing Redirects and Callbacks</li>
                     </ol>
                 </section>
 
                 <section>
+                    <h2>OAuth2 Authorization &amp; SSO</h2>
+                    <ol>
+                        <li>Authorization framework</li>
+                        <li>login.uiowa.edu</li>
+                        <li>Single Sign On</li>
+                    </ol>
+                </section>
+
+                <section>
                     <h2>Workflow Configuration</h2>
                     <img src="images/fieldtypes.png"/>
+                </section>
+
+                <section>
+                    <h2>Integrations</h2>
+                    <ol>
+                        <li>Create new package</li>
+                        <li>Edit package data</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>Workflow Widget</h2>
+                    <ol>
+                        <li>Approval &amp; Void</li>
+                        <li>Routing History</li>
+                        <li>Comments</li>
+                    </ol>
+                </section>
+
+                <section>
+                    <h2>Routing Redirects and Callbacks</h2>
+                    <ol>
+                        <li>Get status of package</li>
+                        <li>Get status of signature</li>
+                    </ol>
                 </section>
 
             </div>
