--- a/docs.html
+++ b/docs.html
@@ -133,13 +133,11 @@
                     <h2>Routing Redirect</h2>
                     <ol>
                         <li>Approver Signature URL</li>
-                        <li>From Inbox
-                            <br/>
-                            formId=2&amp;packageId=10001295&amp;signatureId=2051&amp;rights=SIGNATURE
+                        <li>Redirects from Inbox<br/>
+                            &nbsp;&nbsp;<code>formId=2&amp;packageId=10001295&amp;signatureId=2051&amp;rights=SIGNATURE</code>
                         </li>
-                        <li>From History
-                            <br/>
-                            formId=2&amp;packageId=10000211&amp;rights=HISTORY
+                        <li>Redirects From History<br/>
+                            &nbsp;&nbsp;<code>formId=2&amp;packageId=10000211&amp;rights=HISTORY</code>
                         </li>
                         <li>Should verify using API that the person has access</li>
                     </ol>
